# agentic-video-framework-under-construction

./: .dockerignore  .env.example  .gitignore  AGENT.md  Dockerfile  README.md  TOOLS.md  USER.md  compose.yaml  pyproject.toml
skills/video-editing/: SKILL.md
src/agentic_llm/: __init__.py  __main__.py  config.py
src/agentic_llm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/agentic_llm/agent_loop/: __init__.py  agent_once.py
src/agentic_llm/context/: __init__.py  builder.py  compressor.py
src/agentic_llm/llm/: __init__.py  base.py  deepseek.py
src/agentic_llm/mcp/: __init__.py  client.py  config.py  tools.py
src/agentic_llm/memory/: __init__.py  store.py
src/agentic_llm/mq/: __init__.py  in_memory.py  main_loop.py  messages.py  session_router.py
src/agentic_llm/runtime/: __init__.py  checkpoint.py  cron.py  cron_service.py  hooks.py
src/agentic_llm/session/: __init__.py  history.py
src/agentic_llm/skills/: __init__.py  loader.py
src/agentic_llm/subagents/: __init__.py  manager.py
src/agentic_llm/tools/: __init__.py  base.py  cron_tool.py  file_tools.py  memory_tools.py  registry.py  skill_tools.py  spawn_tool.py  web_tools.py
src/agentic_llm/web/: __init__.py  app.py  dev.py  tracing.py
src/agentic_llm/web/static/: app.js  index.html  styles.css
tests/: test_agent_loop.py  test_config.py  test_deepseek_provider.py  test_mq.py  test_runtime_extensions.py  test_web_app.py  test_web_dev.py
