[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-llm"
version = "0.1.0"
description = "Minimal Agentic LLM runtime based on the design notes."
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

