[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-llm"
version = "0.1.0"
description = "Minimal Agentic LLM runtime based on the design notes."
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
]

[project.scripts]
agentic-llm-web = "agentic_llm.web.app:main"
agentic-llm-web-dev = "agentic_llm.web.dev:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"agentic_llm.web" = ["static/*"]
